--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.asm
+*.png
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,c
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,c
@@ -58,7 +60,7 @@ dkms.conf
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+#!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
