--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ dkms.conf
 ### VisualStudioCode ###
 .vscode/*
 #!.vscode/settings.json
-!.vscode/tasks.json
+#!.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
